Mass Update to support My desktop prefs.
Horray for forks!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,147 +1,61 @@
-## GENERAL
-set -g default-terminal "screen-256color"
-set-option -g default-shell /bin/zsh
+#set -g window-style 'fg=colour244,bg=colour233'
+#set -g window-active-style 'fg=white,bg=#333333'
+#set -g window-active-style 'fg=colour244,bg=colour233'
+set -g window-active-style 'fg=white,bg=#222222'
+#set -g window-style 'fg=white,bg=#333333'
+set -g window-style 'default'
 
-# set mouse scrolling
 set-option -g -q mouse on
 
-# rebind tmux prmix to ctrl-a
+unbind C-b
 set -g prefix C-a
-unbind C-b # unbind the default binding to send prefix key
-#bind C-a send-prefix
+bind C-a send-prefix
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf \; display "Finished sourcing ~/.tmux.conf ."
+# split panes using | and -
+#bind | split-window -h
+#bind - split-window -v
+#unbind '"'
+#unbind %
 
-# Allow for longer history in scrollback buffers; note that tmux-resurrect
-# # (used later) has to save this much information.  Hence the limit of 20000
-# # rather than more; any more, and you should be dumping to a file anyhow.
-set -g history-limit 20000
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+#bind-key -t vi-copy WheelUpPane scroll-up
+#bind-key -t vi-copy WheelDownPane scroll-down
 
-# longer messages
-set-option -g display-time 3000
+# Copy-paste integration
+##set-option -g default-command "reattach-to-user-namespace -l bash"
 
-# address vim mode switching delay (http://superuser.com/a/252717/65504)
-set -s escape-time 0
+# Use vim keybindings in copy mode
+##setw -g mode-keys vi
 
-# vi key mode
-setw -g mode-keys vi
+# Setup 'v' to begin selection as in Vim
+bind-key -n -t emacs-copy C-y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+#bind-key -n C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
-# vi copy/paste
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+# Update default binding of `Enter` to also use copy-pipe
+##unbind -t vi-copy Enter
+##bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# focus events for vim-tmux-focus-events plugin
-set -g focus-events on
+# Bind ']' to use pbpaste
+##bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-# TODO: Not sure if these are needed
-unbind-key Up
-unbind-key Down
-unbind-key Left
-unbind-key Right
-
-
-## XCLIP GOODNESS
-# tmux top buff to system buff
-unbind C-y
-bind C-y run-shell -b "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buff[top] to sys clip"
-#bind C-p run-shell -b "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; display-message "Pasted sys clip to tmux"
-
-# Copy current path to system buff
-unbind C-p
-bind C-p run-shell -b "tmux display -p -F '#{pane_current_path}' | xclip -sel clip -i" \; display "Copied current path '#{pane_current_path}' to the clipboard."
-
-
-## PANES
-set -g pane-base-index 1 # start pane index at 1
-unbind % # TODO: Not sure if this is needed
-# Rebind split keys and ensure pane splitting should retain current path
-bind-key | split-window -h -c "#{pane_current_path}"
-bind-key - split-window -v -c "#{pane_current_path}"
-
-# Cycle Panes
-bind   o select-pane -t :.+  # cycle panes
-bind   O select-pane -t :.-  # cycle panes in reverse
-
-# Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# Resize Panes
-bind  -r   h resize-pane -L 2
-bind  -r C-h resize-pane -L 10
-bind  -r   j resize-pane -D 2
-bind  -r C-j resize-pane -D 10
-bind  -r   k resize-pane -U 2
-bind  -r C-k resize-pane -U 10
-unbind l # unbind default binding for `last-window`
-bind  -r   l resize-pane -R 2
-bind  -r C-l resize-pane -R 10
-
-## WINDOWS
-set-option -g renumber-windows on # sequential window numbers
-set -g base-index 1 # start window index at 1
-set -g allow-rename off # disable auto renaming of windows
-bind C-a last-window # switch to last active window
-# Allow repeats for next/previous-window
-bind -r p previous-window
-bind -r n next-window
-
-## COLOUR (Solarized 256)
-# default statusbar colors
-set-option -g status-bg colour0 #base02
-set-option -g status-fg colour130 #yellow
-set-option -g status-attr default
-
-# status bar customization
-set -g status-interval 2
-set -g status-right-length 80
-set -g status-right "#[fg=colour33]#(basic-cpu-and-memory.tmux --interval 2)#[fg=green] :: %a "
-
-# default window title colors
-set-window-option -g window-status-fg colour33 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour196 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# active/inactive pane styles
-set -g window-style 'fg=default,bg=black'
-set -g window-active-style 'fg=default,bg=colour8'
-
-# pane border
-set-option -g pane-border-style 'fg=colour239,bg=black'
-set-option -g pane-active-border-style 'fg=colour247,bg=colour8'
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour196 #orange
+set -g default-terminal "screen-256color"
 
 # pane number display
-set-option -g display-panes-active-colour colour20 #blue
-set-option -g display-panes-colour colour196 #orange
+#set-option -g display-panes-active-colour blue #blue
+#set-option -g display-panes-colour brightred #orange
 
 # clock
-set-window-option -g clock-mode-colour colour40 #green
+#set-window-option -g clock-mode-colour green #green
 
-## TPM - tmux plugin manager
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# TPM options
-# tmux default-command can NOT contain && or || operators for the below to work
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-processes 'false'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
