--- a/ansible/roles/oh-my-zsh/tasks/main.yml
+++ b/ansible/roles/oh-my-zsh/tasks/main.yml
@@ -3,10 +3,10 @@
   apt: pkg=zsh,git state=latest
   register: installation
 
-- name: Backing up existing ~/.zshrc
-  shell: if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
-  when: installation|success
-  sudo: no
+#- name: Backing up existing ~/.zshrc
+#  shell: if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
+#  when: installation|success
+#  sudo: no
 
 - name: Cloning  oh-my-zsh
   git:
@@ -16,9 +16,9 @@
   register: cloning
   sudo: no
 
-- name: Creating new ~/.zshrc
-  copy:
-    src=~/.oh-my-zsh/templates/zshrc.zsh-template
-    dest=~/.zshrc
-  when: cloning|success
-  sudo: no
+#- name: Creating new ~/.zshrc
+#  copy:
+#    src=~/.oh-my-zsh/templates/zshrc.zsh-template
+#    dest=~/.zshrc
+#  when: cloning|success
+#  sudo: no
