--- a/ansible/roles/sublime/tasks/main.yml
+++ b/ansible/roles/sublime/tasks/main.yml
@@ -23,9 +23,9 @@
 
 - name: Unarchive Sublime
   unarchive:
-    dest: /opt/sublime_text_3
+    dest: /opt
     src: "{{ sublime_download.dest }}"
-    extra_opts: ['--strip-components=1']
+    #extra_opts: ['--strip-components=1']
   become: yes
 
 # Create a list of icon sizes in sublime archive
