Removed paramiko, because it's a bitch.

--- a/ansible/tasks/ubuntu.yml
+++ b/ansible/tasks/ubuntu.yml
@@ -30,7 +30,7 @@
       - pysphere
       - boto
       - pywinrm
-      - paramiko
+        #- paramiko
       - PyYAML
       - Jinja2
       - httplib2
