New role to install the gtk3 arc theme.
# 50-character subject line
#
# 72-character wrapped longer description.

--- a/ansible/tasks/ubuntu.yml
+++ b/ansible/tasks/ubuntu.yml
@@ -33,11 +33,11 @@
         #- paramiko
       - PyYAML
       - Jinja2
-      - httplib2
-      - argparse
+        #- httplib2
+        #- argparse
       - awscli
-      - six
-    become: yes
+        #- six
+    become: no
     tags: ["packages", "pip"]
 
 # Git repos dir
