--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -60,6 +60,7 @@
     - { role: gradle, gradle_daemon: true, tags: [ 'gradle' ] }
     - { role: node, tags: [ 'node' ] }
     - { role: oh-my-zsh, tags: [ 'oh-my-zsh' ] }
+    - { role: gnome-themes, tags: [ 'gnome-themes' ] }
 
   post_tasks:
     - name: Setup git config
