Added new repo for Numix theme
Installs PPA Repo and Packages for Numix theme/icons.

--- a/ansible/roles/gnome-themes/tasks/ubuntu.yml
+++ b/ansible/roles/gnome-themes/tasks/ubuntu.yml
@@ -22,4 +22,17 @@
   become: yes
   tags: ["gnome-themes","packages"]
 
+- name: Configure Numix PPA repo
+  apt_repository:
+    repo: ppa:numix/ppa
+    state: present
+  become: yes
+  tags: gnome-themes
 
+- name: Install Numix Theme and Icon Sets
+  apt:
+    update_cache: yes
+    name: numix-icon-theme-circle
+    state: latest
+  become: yes
+  tags: ["gnome-themes","packages"]
