--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,10 +25,18 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 ##set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Use vim keybindings in copy mode
-##setw -g mode-keys vi
+setw -g mode-keys vi
+
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -n -t emacs-copy C-y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+#bind-key -n -t emacs-copy C-y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+#bind-key -n -t emacs-copy A-y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
 #bind-key -n C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Update default binding of `Enter` to also use copy-pipe
