--- a/ansible/tasks/ubuntu.yml
+++ b/ansible/tasks/ubuntu.yml
@@ -28,15 +28,8 @@
     pip: name={{ item }} state=latest
     with_items:
       - pysphere
-      - boto
-      #- pywinrm  # Needed for controlling windows servers
-        #- paramiko
       - PyYAML
-      - Jinja2
-        #- httplib2
-        #- argparse
-      #- awscli  # Needed for AWS CLI controls
-        #- six
+      - awscli  # Needed for AWS CLI controls
     become: no
     tags: ["packages", "pip"]
 
