--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -147,3 +147,19 @@
         mode="{{ item.value.mode }}"
       with_dict: aws_config_files
       no_log: true
+
+    - name: Download git Repos
+      git:
+        repo: "{{ item.value.url }}"
+        dest: "/home/{{ current_user }}/repos/git/{{ item.key }}"
+      with_dict: git_repos
+      when: dl_git_repos == true
+
+    - name: Download svn Repos
+      subversion:
+        repo: "{{ item.value.url }}"
+        dest: "/home/{{ current_user }}/repos/svn/{{ item.key }}"
+        username: "{{ item.value.user }}"
+        password: "{{ item.value.pass }}"
+      with_dict: svn_repos
+      when: dl_svn_repos
