--- a/ansible/roles/spotify/tasks/ubuntu.yml
+++ b/ansible/roles/spotify/tasks/ubuntu.yml
@@ -1,9 +1,12 @@
 ---
  - name: Add spotify key
    apt_key: id=BBEBDCB318AD50EC6865090613B00F1FD2C19886 keyserver="hkp://keyserver.ubuntu.com:80" state=present
+   become: yes
 
  - name: Add spotify repository
    apt_repository: repo="deb http://repository.spotify.com stable non-free"
+   become: yes
 
  - name: Ensure spotify is installed
-   apt: pkg=spotify-client  state={{spotify_pkg_state}}
+   apt: name=spotify-client  state=latest
+   become: yes
