--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -46,7 +46,7 @@
         - svn
 
   roles:
-      #- { role: ssh, tags: [ 'ssh' ] }
+    - { role: ssh, tags: [ 'ssh' ] }
     - { role: sublime, tags: [ 'sublime' ] }
       #- { role: java, tags: [ 'java' ] }
       #- { role: xcape, xcape_install_dir: "{{ ansible_user_dir }}/repos/git", tags: [ 'xcape' ] }
