--- a/ansible/tasks/ubuntu.yml
+++ b/ansible/tasks/ubuntu.yml
@@ -250,7 +250,7 @@
     shell: 'apt-add-repository -y ppa:jfi/ppa'
     become: yes
     tags: sensors
-    when: ansible_virtualization_role == "host"
+    when: ansible_virtualization_role == "host" and ansible_distribution_version == "16.04"
 
   - name: Install Psensor
     apt:
