General environmnet updates.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,11 +28,12 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 setw -g mode-keys vi
 
 bind P paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
+bind-key -T vi-copy v begin-selection
+bind-key -T vi-copy y copy-selection
+bind-key -T vi-copy r rectangle-toggle
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind-key -T vi-copy y copy-pipe "xclip -sel clip -i"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
 # Setup 'v' to begin selection as in Vim
 #bind-key -n -t emacs-copy C-y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
