--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,9 +28,9 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 setw -g mode-keys vi
 
 bind P paste-buffer
-bind-key -T vi-copy v begin-selection
-bind-key -T vi-copy y copy-selection
-bind-key -T vi-copy r rectangle-toggle
+#bind-key -T vi-copy v begin-selection
+#bind-key -T vi-copy y copy-selection
+#bind-key -T vi-copy r rectangle-toggle
 
 #bind-key -T vi-copy y copy-pipe "xclip -sel clip -i"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
