--- a/ansible/roles/ssh/tasks/main.yml
+++ b/ansible/roles/ssh/tasks/main.yml
@@ -13,3 +13,13 @@
 - name: Funtoo keychain tasks
   include: funtoo-keychain.yml
 
+## Copy the list of private keys:dict() in secrets.yml
+- name: Make sure our private keys are on the system
+  copy:
+    content: "{{ item.value.key_value }}"
+    dest: "/home/{{ current_user }}/.ssh/{{ item.value.key_name }}"
+    owner: "{{ current_user }}"
+    group: "{{ current_user }}"
+    mode: 0600
+  no_log: true
+  with_dict: "{{ keys }}"
