--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -59,17 +59,13 @@
     - { role: gnome-themes, tags: [ 'gnome-themes' ] }
     - { role: spotify, tags: [ 'spotify' ] }
     - { role: repos-git, tags: [ 'repos-git' ] }
+    - { role: aws, tags: [ 'aws' ] }
 
   post_tasks:
     - name: Setup git config
       template:
         dest: "{{ ansible_user_dir }}/.gitconfig"
         src: ../templates/.gitconfig.j2
-
-    - name: Ensure dev directory
-      file:
-        state: directory
-        path: "{{ dev_home }}"
 
     - name: Symlink dotfiles
       command: bin/dfm install chdir={{ ansible_user_dir }}/.dotfiles
@@ -94,44 +90,6 @@
         state: present
       become: yes
       when: usr_shell == 'zsh'
-
-    - name: Ensure there is an .ssh directory
-      file:
-        path: "/home/{{ current_user }}/.ssh"
-        state: directory
-        owner: "{{ current_user }}"
-        group: "{{ current_user }}" 
-        mode: 0700
-
-    - name: Make sure our private keys are on the system
-      copy:
-        content: "{{ item.value.key_value }}"
-        dest: "/home/{{ current_user }}/.ssh/{{ item.value.key_name }}"
-        owner: "{{ current_user }}"
-        group: "{{ current_user }}"
-        mode: 0600
-      no_log: true
-      with_dict: "{{ keys }}"
-
-    - name: Ensure there is a .aws directory
-      file:
-        path: "/home/{{ current_user }}/.aws"
-        state: directory
-        owner: "{{ current_user }}"
-        group: "{{ current_user }}" 
-        mode: 0700
-
-    - name: Copy AWS Config and Credential Files
-      copy:
-        dest: "{{ item.key }}"
-        content: "{{ item.value.content }}"
-        owner: "{{ item.value.owner }}"
-        group: "{{ item.value.group }}"
-        mode: "{{ item.value.mode }}"
-      with_dict: "{{ aws_config_files }}"
-      no_log: true
-
-
 
     - name: Download private svn Repos
       subversion:
