--- a/ansible/roles/oh-my-zsh/tasks/main.yml
+++ b/ansible/roles/oh-my-zsh/tasks/main.yml
@@ -1,24 +1,15 @@
 ---
-- name: Installing Zsh and git
-  apt: pkg=zsh,git state=latest
-  register: installation
+- name: Ensure Fedora/Korora package dependencies
+  include: darwin.yml
+  when: ansible_distribution == 'MacOSX'
 
-#- name: Backing up existing ~/.zshrc
-#  shell: if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
-#  when: installation|success
-#  sudo: no
+- name: Ensure Ubuntu package dependencies
+  include: ubuntu.yml
+  when: ( ansible_distribution == 'Ubuntu') or ( ansible_distribution == 'Debian' )
 
 - name: Cloning  oh-my-zsh
   git:
-    repo=https://github.com/robbyrussell/oh-my-zsh
-    dest=~/.oh-my-zsh
-  when: installation|success
-  register: cloning
+    accept_hostkey: yes
+    repo: https://github.com/robbyrussell/oh-my-zsh
+    dest: "{{ current_user_home }}/.oh-my-zsh"
   sudo: no
-
-#- name: Creating new ~/.zshrc
-#  copy:
-#    src=~/.oh-my-zsh/templates/zshrc.zsh-template
-#    dest=~/.zshrc
-#  when: cloning|success
-#  sudo: no
