--- a/ansible/roles/ssh/tasks/main.yml
+++ b/ansible/roles/ssh/tasks/main.yml
@@ -6,7 +6,6 @@
     path: "{{ current_user_home }}/.ssh"
     state: directory
     owner: "{{ current_user }}"
-    group: "{{ current_user }}"
     mode: 0700
 
 ## Funtoo keychain
@@ -17,9 +16,8 @@
 - name: Make sure our private keys are on the system
   copy:
     content: "{{ item.value.key_value }}"
-    dest: "/home/{{ current_user }}/.ssh/{{ item.value.key_name }}"
+    dest: "{{ current_user_home }}/.ssh/{{ item.value.key_name }}"
     owner: "{{ current_user }}"
-    group: "{{ current_user }}"
     mode: 0600
   no_log: true
   with_dict: "{{ keys }}"
