--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/bundle/Vundle.vim"]
 	path = .vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "ansible/roles/ansible-role-homebrew"]
+	path = ansible/roles/ansible-role-homebrew
+	url = https://github.com/geerlingguy/ansible-role-homebrew.git
