Updates for backup.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+#set allow-rename off
+set-option -g allow-rename off
+
 #set -g window-style 'fg=colour244,bg=colour233'
 #set -g window-active-style 'fg=white,bg=#333333'
 #set -g window-active-style 'fg=colour244,bg=colour233'
@@ -68,3 +71,5 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
